--- a/apps/front/src/app.pcss
+++ b/apps/front/src/app.pcss
@@ -2,18 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
-  @apply h-full;
-  overscroll-behavior-y: none;
-}
-
-html,
-body {
-  @apply h-full overflow-hidden;
-  touch-action: manipulation;
-}
-
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -36,6 +24,14 @@ body {
     --input: 240 5.9% 90%;
     --ring: 240 5.9% 10%;
     --radius: 0.5rem;
+    --sidebar-background: 0 0% 98%;
+    --sidebar-foreground: 240 5.3% 26.1%;
+    --sidebar-primary: 240 5.9% 10%;
+    --sidebar-primary-foreground: 0 0% 98%;
+    --sidebar-accent: 240 4.8% 95.9%;
+    --sidebar-accent-foreground: 240 5.9% 10%;
+    --sidebar-border: 220 13% 91%;
+    --sidebar-ring: 217.2 91.2% 59.8%;
   }
   .dark {
     --background: 240 10% 3.9%;
@@ -57,6 +53,14 @@ body {
     --border: 240 3.7% 15.9%;
     --input: 240 3.7% 15.9%;
     --ring: 240 4.9% 83.9%;
+    --sidebar-background: 0 0% 7.456%;
+    --sidebar-foreground: 240 4.8% 95.9%;
+    --sidebar-primary: 0 0% 98%;
+    --sidebar-primary-foreground: 240 5.9% 10%;
+    --sidebar-accent: 240 3.7% 15.9%;
+    --sidebar-accent-foreground: 240 4.8% 95.9%;
+    --sidebar-border: 240 3.7% 15.9%;
+    --sidebar-ring: 217.2 91.2% 59.8%;
   }
 }
 
@@ -119,14 +123,9 @@ body {
 
 html,
 body {
-  @apply h-full;
-  overscroll-behavior-y: none;
-}
-
-html,
-body {
   @apply h-full overflow-hidden;
   touch-action: manipulation;
+  overscroll-behavior-y: none;
 }
 
 #root {
@@ -135,4 +134,8 @@ body {
 
 body {
   -webkit-tap-highlight-color: transparent;
+}
+
+* {
+  @apply border-border;
 }
